--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,10 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+chrono = "0.4.38"
+error = "0.1.9"
+jsonwebtoken = "9.3.0"
+serde = "1.0"
+serde_json = "1.0"
+thiserror = "1.0.61"
+warp = "0.3.7"
